Small fix to playlist overflow

--- a/front-end/src/app/main-page/home/home.component.css
+++ b/front-end/src/app/main-page/home/home.component.css
@@ -77,7 +77,6 @@ mat-card:hover {
 .title {
   width: 100%;
   height: 15%;
-  font-weight: 500;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -85,13 +84,19 @@ mat-card:hover {
   font-size: 14px;
 }
 
-.title div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.title .name {
+  width: 100%;
+  text-align: center;
+  min-height: 18px;
+  font-weight: 500;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.title div .user {
   font-style: italic;
   font-weight: 400;
-  font-size: 14px;
 }
 
 .link:hover {
